--- a/capstone/java/src/main/resources/application.properties
+++ b/capstone/java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/TEgram_db
-spring.datasource.name=TEgram_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/tegram_db
+spring.datasource.name=tegram_db
 spring.datasource.username=final_capstone_appuser
 spring.datasource.password=finalcapstone
 
